# korean-assembly-bills

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: mp_metadata.parquet
src/korean_assembly_bills/: __init__.py  cli.py  loader.py
